[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true


[project]
name = "projectb"
version = "0.0.1"
dependencies = [
  "projecta @ git+https://github.com/rjekker/achmea-demo/projecta"
]

[project.scripts]
hellob = "projectb.hello:main"